# stock-market-app

./: .gitignore  README.md  alembic.ini  pyproject.toml
app/: database.py  main.py  schemas.py  security.py
app/routers/: stocks.py  user.py
app/services/: cache.py
static/: script.js  style.css
templates/: base.html  dashboard.html  index.html  login.html  register.html
