[project]
name = "backend-compendium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.3",
    "jinja2>=3.1.6",
    "load-dotenv>=0.1.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "pydantic>=2.12.5",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "yfinance>=1.2.0",
]
